--- a/skaterproject/skaterproject/static/css/base.css
+++ b/skaterproject/skaterproject/static/css/base.css
@@ -1,100 +1,94 @@
-*, *::before, *::after {
-box-sizing: border-box;
-}
-
 body {
-font-family: sans-serif;
-margin: 0;
+    font-family: sans-serif;
+    margin: 0;
 }
 
 img {
-width: 100%;
-height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 header {
-background: url('../img/armantoBanner.jpeg') right center no-repeat #000;
-color: #fff;
+    background: url('../img/armantoBanner.jpeg') #000;
+    color: white;
+    text-align: center;
 }
 
 header h1 {
-text-shadow: 0 0 10px #000;
-font-weight: 100;
-font-size: 3rem;
-padding: 60px 60px;
-margin: 0;
+    text-shadow: 0 0 10px #ff4ad8;
+    font-weight: 100;
+    font-size: 3rem;
+    padding: 60px 60px;
+    margin: 0;
 }
 
 footer {
-background: #000;
-color: #fff;
-text-align: center;
-padding: 20px;
+    background: lightblue;
+    color: #fff;
+    text-align: center;
+    padding: 15px;
 }
 
 nav {
-background: rgba(50, 50, 50, .6);
+    background: #ffe0f8;
+    text-align: center;
 }
 
 nav ul {
-margin: 0;
-padding: 0;
-list-style-type: none;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 
 nav ul li {
-display: inline-block;
+    display: inline-block;
 }
 
 nav ul li a {
-display: inline-block;
-text-decoration: none;
-color: #fff;
-padding: 10px 20px;
-}
-
-nav ul li a:hover {
-transition: all 1s;
-background: #000;
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(18, 35, 109);
+    padding: 10px 20px;
 }
 
 nav ul li a.current {
-background: #fff;
-color: #000;
-border-radius: 10px 10px 0 0;
+    background: #b4ffa8;
+    color: #000;
+    border-radius: 10px 10px 0 0;
 }
 
 .container {
-max-width: 1200px;
-min-height: 70vh;
-padding: 20px 0;
-margin: auto;
+    max-width: 1200px;
+    min-height: 70vh;
+    margin: auto;
+    padding: 20px 0;
 }
 
 .grid {
-display: flex;
-flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
 }
 
 .grid-item {
-width: 25%;
-padding: 10px;
+    width: 25%;
+    padding: 10px;
 }
 
 label {
-display: block;
-font-weight: bold;
+    display: block;
+    font-weight: bold;
 }
 
 input[type="text"], input[type="number"], select, textarea {
-display: block;
-width: 100%;
-padding: 10px;
-margin: 10px 0;
-font: inherit;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    font: inherit;
 }
 
-button, input[type="submit"], input[type="reset"], .button {
+/* button, input[type="submit"], input[type="reset"], .button {
 display: inline-block;
 background: #333;
 color: white;
@@ -107,151 +101,20 @@ outline: inherit;
 text-decoration: none;
 text-align: center;
 }
-
-button:hover, input[type="submit"]:hover, input[type="reset"]:hover, .button:hover {
-transition: 1s all;
-background: #000;
-}
+} */
 
 .success {
-background: palegreen;
-color: darkgreen;
-font-weight: bold;
-padding: 20px;
-margin: 20px 0;
+    background: palegreen;
+    color: darkgreen;
+    font-weight: bold;
+    padding: 30px;
+    margin: 30px 0;
 }
 
 .error {
-background: lightpink;
-color: darkred;
-font-weight: bold;
-padding: 20px;
-margin: 20px 0;
-}
-
-body {
-font-family: sans-serif;
-margin: 0;
-}
-
-img {
-width: 100%;
-height: auto;
-}
-
-header {
-background: url('../img/django-bg.jpg') right center no-repeat #000;
-color: #fff;
-}
-
-header h1 {
-text-shadow: 0 0 10px #000;
-font-weight: 100;
-font-size: 3rem;
-padding: 60px 60px;
-margin: 0;
-}
-
-footer {
-background: #000;
-color: #fff;
-text-align: center;
-padding: 20px;
-}
-
-nav {
-background: rgba(50, 50, 50, .6);
-}
-
-nav ul {
-margin: 0;
-padding: 0;
-list-style-type: none;
-}
-
-nav ul li {
-display: inline-block;
-}
-
-nav ul li a {
-display: inline-block;
-text-decoration: none;
-color: #fff;
-padding: 10px 20px;
-}
-
-nav ul li a:hover {
-transition: all 1s;
-background: #000;
-}
-
-nav ul li a.current {
-background: #fff;
-color: #000;
-border-radius: 10px 10px 0 0;
-}
-
-.container {
-max-width: 1200px;
-min-height: 70vh;
-padding: 20px 0;
-margin: auto;
-}
-
-.grid {
-display: flex;
-flex-wrap: wrap;
-}
-
-.grid-item {
-width: 25%;
-padding: 10px;
-}
-
-label {
-display: block;
-font-weight: bold;
-}
-
-input[type="text"], input[type="number"], select, textarea {
-display: block;
-width: 100%;
-padding: 10px;
-margin: 10px 0;
-font: inherit;
-}
-
-button, input[type="submit"], input[type="reset"], .button {
-display: inline-block;
-background: #333;
-color: white;
-border: 1px solid #333;
-padding: 10px 20px;
-margin: 5px 0;
-font: inherit;
-cursor: pointer;
-outline: inherit;
-text-decoration: none;
-text-align: center;
-}
-
-button:hover, input[type="submit"]:hover, input[type="reset"]:hover, .button:hover {
-transition: 1s all;
-background: #000;
-}
-
-.success {
-background: palegreen;
-color: darkgreen;
-font-weight: bold;
-padding: 20px;
-margin: 20px 0;
-}
-
-.error {
-background: lightpink;
-color: darkred;
-font-weight: bold;
-padding: 20px;
-margin: 20px 0;
+    background: yellow;
+    color: darkred;
+    font-weight: bold;
+    padding: 30px;
+    margin: 30px 0;
 }
